# async-jobs-fastapi-celery-redis-job-processing-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_jobs_table.py
app/: config.py  database.py  logging_config.py  main.py  metrics.py  models.py  schemas.py
app/api/: health.py  jobs.py  stream.py
app/worker/: celery_app.py  tasks.py
tests/: conftest.py  test_idempotency.py  test_retry.py  test_state_transitions.py
